# DataManager

./: .gitignore  CMakeLists.txt  TODO  cppan.yml  schema.txt  sw.cpp
data/: 0001.db_structure.json  0003.first_string.json  0004.first_group.json  0005.first_clan.json  0010.equipments.json  0015.goods.json  0016.projectiles.json  0017.weapons.json  0018.clans.json  0019.modificators.json  0020.gliders.json  0030.buildings.json  0040.objects.json  0050.maps.json  0060.first_config.json  0070.first_mech.json  0100.mods.json  0101.mods_strings.json  schema.txt
include/Polygon4/: Database.h  DatabaseSchema.h  Exception.h  Memory.h  Storage.h  StorageImpl.h  String.h  Table.h  Types.h  Vector.h
include/Polygon4/DataManager/: Common.h  Database.h  DatabaseSchema.h  Dll.h  Enums.h  Exception.h  Helpers.h  Languages.inl  Localization.h  MemoryManager.h  ObjectMap.h  Pointer.h  Schema.h  Settings.h  Storage.h  StorageImpl.h  String.h  Table.h  TreeItem.h  Types.h  Vector.h
include/Polygon4/DataManager/Interface/: IConfiguration.h  IConfigurationWeapon.h  IGlider.h  IMechanoid.h  IModification.h
include/Polygon4/DataManager/Schema/: Context.h  Emitter.h  Parser.h  Print.h  Schema.h  Token.h  Types.h
include/Polygon4/DataManager/detail/: Helpers.h  ObjectInterfaces.h  ObjectTypes.h  Storage.h  StorageImpl.h  Types.h
include/Polygon4/DataManager/interface/: IMap.h  IMapBuilding.h  IMapObject.h  IMechanoid.h  IModification.h
include/Polygon4/detail/: Helpers.h  ObjectTypes.h  Storage.h  StorageImpl.h  Types.h
scripts/: dbmgr.py  dbmgr_clearfield.bat  dbmgr_dump.bat  dbmgr_load.bat  dbmgr_merge.bat  format.py
src/: CMakeLists.txt  Database.cpp  Helpers.cpp  Storage.cpp  StorageImpl.cpp  String.cpp  Types.cpp
src/detail/: Helpers.cpp  Storage.cpp  StorageImpl.cpp  Types.cpp
src/generator/: CMakeLists.txt  ast.h  data.cpp  data.h  grammar.yy  lexer.ll  main.cpp  parser.cpp  parser.h  parser_mm.h  print.cpp  token.cpp  token.h  types.h
src/manager/: CMakeLists.txt  Database.cpp  Enums.cpp  Exception.cpp  Localization.cpp  Logger.h  Schema.cpp  Settings.cpp  Storage.cpp  StorageImpl.cpp  String.cpp  Types.cpp
src/memory/: Memory.cpp
src/schema/: Ast.h  CMakeLists.txt  Context.cpp  Parser.cpp  ParserDriver.cpp  ParserDriver.h  Print.cpp  Schema.cpp  Token.cpp  Types.cpp  grammar.yy  lexer.ll  schema.ll  schema.yy
tools/: Polygon4.natvis  add_copyright.sh  copyright.txt  dbmgr.py  dbmgr_make_enums.bat  dbmgr_removefield.bat  dbmgr_renamefield.bat  format.py  make_strings_text_ids.sh
